# ai-file-sorter

./: .env.example  cmake.bat  git_elev_output.txt  git_op_output.txt  pytest.ini  requirements-dev.txt  requirements.txt  run_build_vsdevcmd.cmd  setup.py  tmp_build_cmd.cmd
app/: CMakeLists.txt  build_windows.ps1
app/scripts/: env_check.ps1  install_vcpkg.ps1  run_dev_env_check.ps1  run_vs_installer.ps1  vs_download_check.ps1
config/: config.yaml.example
docs/: INSTALLATION.md  Initial_review.md  PYTHON_IMAGE_TAGGER_README.md  compass_artifact_wf-c0099347-2c72-419d-b9f5-7570c07fef02_text_markdown.md
docs/planning/: EPIC-001-Automated-Image-Tagging-System.md  STORY-001-Project-Setup.md  STORY-002-Booru-Search.md  STORY-003-XMP-Writer.md  STORY-004-Content-Analysis.md  STORY-005-Preference-Learning.md  STORY-006-NAS-Sync.md  STORY-007-JSON-Validation.md  STORY-008-Workflow-Orchestration.md  STORY-009-Config-Setup.md  STORY-010-Testing.md  STORY-011-Documentation.md
logs/: env_check_vs_nvcc.txt
src/: main.py
src/booru/: __init__.py  booru_searcher.py  cache_manager.py  danbooru_client.py  iqdb_client.py  saucenao_client.py  tag_normalizer.py
src/content_analysis/: __init__.py  clip_classifier.py  content_analyzer.py  object_detector.py
src/learning/: __init__.py  preference_database.py
src/utils/: config_loader.py  logger.py  rate_limiter.py  setup_wizard.py  verify_setup.py
src/workflow/: __init__.py  json_validator.py  nas_sync.py  orchestrator.py
src/xmp_writer/: __init__.py  exiftool_wrapper.py  metadata_builder.py
tests/: conftest.py
tests/test_booru/: test_cache_manager.py  test_danbooru_client.py  test_tag_normalizer.py
tests/test_e2e/: test_workflow.py
tests/test_performance/: test_benchmarks.py
tests/test_utils/: test_rate_limiter.py
tests/test_xmp_writer/: test_exiftool_wrapper.py  test_metadata_builder.py
